<resources>
    <string name="app_name">Wise Waste</string>
    <string name="logo_desc">App logo</string>
    <string name="settings_desc">Settings icon</string>
    <string name="total_bins">Total Bins Nearby</string>
    <string name="bin_count">4</string>
    <string name="bins_status">Bins Status</string>
    <string name="pie_chart_desc">Pie chart showing bin status</string>
    <string name="biodegradable">Biodegradable</string>
    <string name="bio_desc">Biodegradable waste icon</string>
    <string name="metal">Metal</string>
    <string name="metal_desc">Metal waste icon</string>
    <string name="plastic">Plastic</string>
    <string name="plastic_desc">Plastic waste icon</string>
    <string name="plastic_bottle">Plastic Bottles</string>
    <string name="plasticbottle_desc">Plastic bottle waste icon</string>
    <string name="live_monitoring">Live Bin Monitoring</string>
    <string name="bin_01">Bin 01</string>
    <string name="bin_02">Bin 02</string>
    <string name="bin_03">Bin 03</string>
    <string name="bin_04">Bin 04</string>
    <string name="bin_alert_desc">Alert icon when bin is full</string>
    <string name="waste_reports">Waste Reports</string>
    <string name="waste_collected_year_of_2025">Waste Collected Year of 2026</string>
    <string name="total_bins_online">Total Bins Online</string>
    <string name="analytic_report">Analytic Report</string>
    <string name="plastic_name">Plastic</string>
    <string name="plastic__name">Plastic</string>
    <string name="alert">Alert</string>
    <string name="metal_name">Metal</string>
    <string name="metal1">Metal</string>
    <string name="biodegradable1">Biodegradable</string>
    <string name="biodegradable2">Biodegradable</string>
    <string name="alert1">Alert</string>
    <string name="plastic_bottle1">Plastic Bottle</string>
    <string name="plastic_bottle2">Plastic Bottle</string>
    <string name="todo">TODO</string>
    <string name="warning_bin_full">A bin is nearly full! Check Live Monitoring below.</string>
    <string name="notification_bell_desc">Notifications</string>
    <string name="app_name_management">Wise Waste\nManagement</string>
    <string name="login_header">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account_button">Create account</string>
</resources>
